src/test/deca/syntax/invalid/created/test-op3.deca
//test-op3.deca:3:14: mismatched input '+' expecting {';', ',', '='}
{
    boolean a += !1;
}